CRBUG: crbug.com/106813 Pages show incomplete or corrupted rendering due to partial textures not happening with accelerated painting.
Created attachment 129731 [details] proposed patch
Comment on attachment 129731 [details] proposed patch Change looks OK. I feel like we're going to be chasing things like this down for quite a while unless we get the test situation improved, so I'd suggest you spend some time on that before trying to chase down too many more individual bugs.
Comment on attachment 129731 [details] proposed patch Clearing flags on attachment: 129731 Committed r109442: <http://trac.webkit.org/changeset/109442>
All reviewed patches have been landed. Closing bug.