[chromium] Partial texture updates not happening with accelerated painting path https://bugs.webkit.org/show_bug.cgi?id=80040

Reviewed by James Robinson.

The order of y-flip and clip-rect was opposite of what it should be.
The clip rect was not properly transformed to account for y-flip and hence clipping everything.

* platform/graphics/chromium/FrameBufferSkPictureCanvasLayerTextureUpdater.cpp:
(WebCore::FrameBufferSkPictureCanvasLayerTextureUpdater::updateTextureRect):


Canonical link: https://commits.webkit.org/97135@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109442 268f45cc-cd09-0410-ab3c-d52691b4dbfc